--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,13 @@ dependencies {
     implementation project(path: ':a_common')
     /*引入Material样式*/
     implementation 'com.android.support:design:29.0.0'
+    /*引入retrofit网络请求的库，配合okhttp一起使用*/
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    /*okhttp的包*/
+    implementation 'com.squareup.okhttp3:okhttp:3.4.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
