--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,13 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.4.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     implementation 'org.jetbrains.anko:anko-commons:0.10.5'
+    // 辅助下拉刷新的插件
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.47'
+    // 图片加载插件
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    // web方面的插件
+    implementation 'com.just.agentweb:agentweb:4.1.2'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
